@@ -7,22 +7,28 @@ import spark.Route;
 
 public class TempAPI {
 	static Route F56 = (request, response) ->{
-//		ProcessBuilder pb = new ProcessBuilder("ssh", "glenn","<<","EOF","curl","-s 192.168.1.10/a\n",
-//				"curl","-s 192.168.1.10/a","EOF");
-//		pb.inheritIO();
-//		Process process=pb.start();
-//		process.waitFor();
-//		response.body(convertStreamToString(process.getInputStream()));
-		Process curl = Runtime.getRuntime().exec("ssh glenn \"curl -s 192.168.1.10/a ; curl -s 192.168.1.10/b\"");
+		ProcessBuilder pb = new ProcessBuilder("ssh", "glenn",
+				"curl -s 192.168.1.10/a; curl -s 192.168.1.10/b; curl -s 192.168.1.10/c");
+		pb.redirectErrorStream();
+		Process process=pb.start();
+		process.waitFor();
 		byte[] buffer = new byte[1024];
-		curl.getInputStream().read(buffer);
+		process.getInputStream().read(buffer);
 		String s = new String(buffer);
 		System.out.println(s);
 		
-		byte[] buffer2 = new byte[1024];
-		curl.getErrorStream().read(buffer2);
-		String s2 = new String(buffer2);
-		System.out.println(s2);
+//		process.waitFor();
+//		response.body(convertStreamToString(process.getInputStream()));
+//		Process curl = Runtime.getRuntime().exec("ssh glenn \"curl -s 192.168.1.10/a ; curl -s 192.168.1.10/b\"");
+//		byte[] buffer = new byte[1024];
+//		curl.getInputStream().read(buffer);
+//		String s = new String(buffer);
+//		System.out.println(s);
+//		
+//		byte[] buffer2 = new byte[1024];
+//		curl.getErrorStream().read(buffer2);
+//		String s2 = new String(buffer2);
+//		System.out.println(s2);
 		
 		response.body(s);
 		return response;
